--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 alembic==1.0.5
+aniso8601==4.1.0
 argh==0.26.2
 autopep8==1.4.3
 Click==7.0
 coverage==4.5.2
 dominate==2.3.5
 Flask==1.0.2
-Flask-Bootstrap4==4.0.2
+
+Flask-Cors==3.0.7
+
 flask-marshmallow==0.9.0
 Flask-Migrate==2.3.1
 Flask-Moment==0.6.0
+
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
@@ -25,10 +29,13 @@ pycodestyle==2.4.0
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
+python-slugify==2.0.1
+pytz==2018.9
 PyYAML==3.13
 six==1.11.0
 SQLAlchemy==1.2.14
+Unidecode==1.0.23
 visitor==0.1.3
 watchdog==0.9.0
 Werkzeug==0.14.1
-WTForms==2.2.1
+
