--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,13 @@ Click==7.0
 coverage==4.5.2
 dominate==2.3.5
 Flask==1.0.2
-
+Flask-Bootstrap4==4.0.2
 Flask-Cors==3.0.7
-
+Flask-Fixtures==0.3.7
 flask-marshmallow==0.9.0
 Flask-Migrate==2.3.1
 Flask-Moment==0.6.0
-
+Flask-RESTful==0.3.7
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
@@ -38,4 +38,4 @@ Unidecode==1.0.23
 visitor==0.1.3
 watchdog==0.9.0
 Werkzeug==0.14.1
-
+WTForms==2.2.1
