--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.0.2
 Flask-Bootstrap4==4.0.2
 Flask-Cors==3.0.7
 Flask-Fixtures==0.3.7
+Flask-JWT-Extended==3.18.2
 flask-marshmallow==0.9.0
 Flask-Migrate==2.3.1
 Flask-Moment==0.6.0
@@ -23,9 +24,11 @@ Mako==1.0.7
 MarkupSafe==1.1.0
 marshmallow==2.18.0
 marshmallow-sqlalchemy==0.16.0
+passlib==1.7.1
 pathtools==0.1.2
 psycopg2-binary==2.7.6.1
 pycodestyle==2.4.0
+PyJWT==1.7.1
 python-dateutil==2.7.5
 python-dotenv==0.10.1
 python-editor==1.0.3
